--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css"
         integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA" crossorigin="anonymous">
 
-    <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo" rel="Portfolio.css">
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo" rel="stylesheet">
 
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-    <meta property="og:url" content="">
-    <meta property="og:type" content="">
+    <meta property="og:url" content="https://uluru12.github.io/Portfolio/">
+    <meta property="og:type" content="website">
     <meta property="og:title" content="Portfolio">
     <meta property="og:description" content="코딩연습">
     <meta property="og:image" content="ocean3.jpg">
