--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA" crossorigin="anonymous">
 
     <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
 
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
@@ -25,6 +26,10 @@
     <meta property="og:description" content="코딩연습">
     <meta property="og:image" content="ocean3.jpg">
     <style>
+        .container {
+            width: 720px;
+        }
+
         #p1-txt {
             /*표지 글자 전체*/
             color: white;
@@ -32,48 +37,58 @@
 
         .p1-right-txt {
             /*표지 우측 상단*/
-            display: flex;
-            justify-content: center;
             text-align: right;
-            margin-top: -370px;
+            margin-top: -440px;
             font-size: 12px;
         }
 
         .p1-center-txt {
             /*표지 제목, 폰트 크기 개별 지정돼있음*/
             text-align: center;
-            margin-top: 110px;
+            margin-top: 150px;
+        }
+
+        .button-txt {
+            font-family: 'Courgette', cursive;
         }
 
         #p2-txt {
             /*자기소개 폰트크기 18,16,14*/
             color: ;
-            margin-top: 30px;
+            margin-top: 35px;
             font-size: 16px;
         }
 
         #p3-top-txt {
             /*활동내역 제목*/
             width: 720px;
-            color: white;
-            background-color: black;
+            background-color: #f9edcc;
             text-align: center;
             padding: 15px;
+            margin-bottom: -15px;
+            font-size: 23px;
         }
 
         #p3-txt {
             /*활동내역 목록*/
             width: 720px;
-            color: white;
-            background-color: black;
+            background-color: #f9edcc;
             text-align: center;
+            font-size: 14px;
             padding-bottom: 500px;
             /*Carousel margin 같이 조정*/
         }
 
         .carousel-caption {
             /*슬라이드 세부 내용*/
-            background-color: gray;
+            color: black;
+            background-color: #eae9e5;
+        }
+
+        #P4 {
+            width: 720px;
+            margin-right: 15px;
+            margin-left: -15px;
         }
 
         #p4-top-txt {
@@ -82,20 +97,28 @@
             color: black;
             background-color: beige;
             text-align: center;
-            margin-top: 15px;
             padding: 15px;
+            font-size: 23px;
+        }
+
+        #p4-border {
+            width: 720px;
+            margin-right: 15px;
+            margin-left: -15px;
+            background-color: beige;
         }
 
         #p4-pack {
             /*언론 내용 전체*/
+            width: 220px;
             background-color: beige;
-            padding: 10px;
+            padding-bottom: 30px;
             text-align: center;
         }
 
         .p4-sub-txt {
             /*언론 내용 제목*/
-            margin-top: 15px;
+            margin-top: 20px;
             font-size: 18px;
             font-weight: bold;
         }
@@ -103,16 +126,48 @@
         .p4-main-txt {
             /*언론 세부 내용*/
             font-size: 14px;
+            font-weight: initial;
+        }
+
+        .article {
+            color: gray;
+            font-size: 12px;
+        }
+
+        #P5 {
+            width: 720px;
+            margin-right: 15px;
+            margin-left: -15px;
         }
 
         #p5-top-txt {
-            /*수상내역 세부 내용*/
+            /*수상내역 제목*/
             width: 720px;
             color: black;
             background-color: #f7ecc0;
             text-align: center;
-            margin-top: 15px;
-            padding: 15px;
+            padding-top: 20px;
+            font-size: 23px;
+        }
+
+        #p5-pack {
+            /*수상 내역 전체*/
+            width: 720px;
+            margin-right: 15px;
+            margin-left: -15px;
+            padding-bottom: 20px;
+            background-color: #f7ecc0;
+            font-size: 15px;
+        }
+
+        .p5-txt {
+            /*수상내역 세부 내용*/
+            float: left;
+            margin-top: 8px;
+        }
+
+        body {
+            font-family: 'Nanum Myeongjo', serif;
         }
     </style>
 </head>
@@ -123,146 +178,194 @@
         <![endif]-->
 
     <script src="" async defer></script>
-    <div style="display: flex; justify-content: center;">
-        <img src="black.jpg" width="720px;" height="400px;">
-    </div>
-    <div>
-        <div id="p1-txt">
-            <div class="p1-right-txt">
-                바로가기 표시(오른쪽 정렬 필요)
-            </div>
-            <div class="p1-center-txt">
-                <div class="p1-name">
-                    <p>HELLO I'M</p>
-                    <p style="font-size: 27px;">P1, 김학선 포트폴리오(가제)</p>
-                    <p style="font-size: 12px; margin-bottom: 140px;">made by self</p>
+    <div class="container">
+        <div id="P1" style="display: flex; justify-content: center;">
+            <img src="black.jpg" width="720px;" height="450px;">
+        </div>
+        <div>
+            <div id="p1-txt">
+                <div class="p1-right-txt">
+                    여기에 뭘 넣을까
                 </div>
-            </div>
-            <div style="color: black; text-align: center;">
-                2~5page shortcut/ Button 활용 방법 알아내기
-            </div>
-        </div>
-    </div>
-
-
-    <div style="display: flex; justify-content: center;">
-        <div style="float: left; margin: 20px">
-            <img src="profile.jpg" width="270px;" height="360px;">
-        </div>
-        <div id="p2-txt">
-            <p>P2, 자기소개 적기(큰 글자 18, 기본 16, 작은 글자 14)</p>
-            <p>좌측 사진, 키워드 픽토그램 찾아보기</p>
-        </div>
-    </div>
-
-
-    <div style="display: flex; justify-content: center; flex-wrap: wrap;">
-        <div style="width: 720px;">
-            <div id="p3-top-txt">
-                <p>P3, 활동내역(사진 정리, 사이즈 420*477, 언더라인 방법)</p>
-            </div>
-            <div id="p3-txt">
-                <p>활동내역 기간순으로 정리(목록 있는게 좋을듯?)</p>
-            </div>
-        </div>
-    </div>
-
-    <div style="display: flex; justify-content: center;">
-        <div style="width: 420px; margin-top: -500px; margin-bottom: 20px;">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="ocean1.jpg">
-                        <div class="carousel-caption">
-                            <h6>소제목(링크 할지 말지 고민)</h6>
-                            <p>내용</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="ocean2.jpg">
-                        <div class="carousel-caption">
-                            <h6>소제목(링크 할지 말지 고민)</h6>
-                            <p>내용</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="ocean3.jpg">
-                        <div class="carousel-caption">
-                            <h6>소제목(링크 할지 말지 고민)</h6>
-                            <p>내용</p>
-                        </div>
+                <div class="p1-center-txt">
+                    <div class="p1-name">
+                        <p>HELLO I'M</p>
+                        <p style="font-size: 27px;">P1, 김학선 포트폴리오(가제)</p>
+                        <p style="font-size: 14px; margin-bottom: 110px;">made by self</p>
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
+                <div class="button-txt" style="text-align: center; flex-wrap: nowrap;">
+                    <a href="#P2">
+                        <button type="button" class="btn btn-dark">
+                            Introduce
+                        </button>
+                    </a>
+                    <a href="#P3">
+                        <button type="button" class="btn btn-light">
+                            Experiences
+                        </button>
+                    </a>
+                    <a href="#P4">
+                        <button type="button" class="btn btn-warning">
+                            News&Broadcast
+                        </button>
+                    </a>
+                    <a href="#P5">
+                        <button type="button" class="btn btn-info">
+                            Awards&Achievements
+                        </button>
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
 
 
-    <div style="display: flex; justify-content: center;">
-        <div id="p4-top-txt">
-            <p>P4, 언론 및 방송(사진 정리 220*240, 배경색, 언더라인)</p>
-        </div>
-    </div>
-
-    <div style="display: flex; justify-content: center;">
-        <div id="p4-pack">
-            <img src="1.jpg" width="220px;" height="240px;">
-            <div class="p4-sub-txt">
-                <p>1번 소제목</p>
+        <div id="P2" style="display: flex; justify-content: center;">
+            <div style="float: left; margin: 15px; margin-top: 23px;">
+                <img src="profile.jpg" width="270px;" height="360px;">
             </div>
-            <div class="p4-main-txt">
-                <p>1번 소개글</p>
-                <p>각 소개글 하단 링크(a 태그)</p>
+            <div id="p2-txt">
+                <p>자기소개 적기(큰 글자 18, 기본 16, 작은 글자 14)</p>
+                <p>좌측 사진, 키워드 픽토그램 찾아보기</p>
             </div>
         </div>
-        <div id="p4-pack">
-            <img src="2.jpg" width="220px;" height="240px;">
-            <div class="p4-sub-txt">
-                <p>2번 소제목</p>
-            </div>
-            <div class="p4-main-txt">
-                <p>2번 소개글</p>
-            </div>
-        </div>
-        <div id="p4-pack">
-            <img src="3.jpg" width="220px;" height="240px;">
-            <div class="p4-sub-txt">
-                <p>3번 소제목</p>
-            </div>
-            <div class="p4-main-txt">
-                <p>3번 소개글</p>
-            </div>
-        </div>
-    </div>
 
 
-    <div style="display: flex; justify-content: center;">
-        <div id="p5-top-txt">
-            <p>P5, 수상내역(우측 사진, 배경색, 언더라인)</p>
-            <p>Awards & Achievements</p>
+        <div id="P3" style="display: flex; justify-content: center; flex-wrap: wrap;">
+            <div style="width: ;">
+                <div id="p3-top-txt">
+                    <p style="font-family: 'Courgette', cursive;">Experiences(420*477)</p>
+                </div>
+                <div id="p3-txt">
+                    UnivExpo Jeonju 서포터즈 팀장<br>
+                    전라북도 대학생 PT 경진대회 프레젠터<br>
+                    청춘부보상 9기 기획단 루트장<br>
+                    2017 사회적기업가 육성사업<br>
+                    Story Creator 3기 멘토<br>
+                    영업인재 마스터 프로젝트 1~2기 기획 및 운영<br>
+                    청춘부보상 대장정 10~11기 기획 및 운영<br>
+                    청춘부보상 대장정 10~11기 기획 및 운영<br>
+                    CODE EIGHT 코딩스쿨 수료<br>
+                    &nbsp;
+                </div>
+            </div>
         </div>
-    </div>
 
-    <div style="display: flex; justify-content: center;">
-        <div class="p5-txt" style="float: left; margin-top: 20px;">
-            <p>수상내역 정리(큰 글자 18, 기본 16, 작은 글자 12)</p>
-            <p>목록 배열 방식 고민</p>
+        <div style="display: flex; justify-content: center;">
+            <div style="width: 420px; margin-top: -500px; margin-bottom: 20px;">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="ocean1.jpg">
+                            <div class="carousel-caption">
+                                <h6>소제목(링크 할지 말지 고민)</h6>
+                                <p>내용</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="ocean2.jpg">
+                            <div class="carousel-caption">
+                                <h6>소제목(링크 할지 말지 고민)</h6>
+                                <p>내용</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="ocean3.jpg">
+                            <div class="carousel-caption">
+                                <h6>소제목(링크 할지 말지 고민)</h6>
+                                <p>내용</p>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
         </div>
-        <div style="margin: 20px">
-            <img src="Award.jpg" width="270px;" height="360px;">
+
+
+        <div id="P4" style="display: flex; justify-content: center;">
+            <div id="p4-top-txt">
+                <p style="font-family: 'Courgette', cursive;">News&Broadcast(220*240)</p>
+            </div>
+        </div>
+
+        <div id="p4-border" style="display: flex; justify-content: space-around;">
+            <div id="p4-pack">
+                <img src="10.jpg" width="220px;" height="240px;">
+                <div class="p4-sub-txt">
+                    <p>전주시 아동복지 성금 조성</p>
+                    <div class="p4-main-txt">
+                        <p>사회적 가치 위한 프로그램 기획,<br> 전주시 복지정책 '밥 굶는 아이 없는 엄마의 밥상'에 성금 215만원을 조성하여 전달.</p>
+                        <a class="article" target="_blank" rel="noopener noreferrer"
+                            href="http://www.gukjenews.com/news/articleView.html?idxno=865109">뉴스 링크</a>
+                    </div>
+                </div>
+            </div>
+            <div id="p4-pack">
+                <img src="kbs.jpg" width="220px;" height="240px;">
+                <div class="p4-sub-txt">
+                    <p>KBS 투데이 전북 출연</p>
+                    <div class="p4-main-txt">
+                        <p>청년 단체 대표로서 출연,<br> 지역 경제 활성화 등 활동 소개.</p>
+                    </div>
+                </div>
+            </div>
+            <div id="p4-pack">
+                <img src="11.jpg" width="220px;" height="240px;">
+                <div class="p4-sub-txt">
+                    <p>복지시설 기부금 전달</p>
+                    <div class="p4-main-txt">
+                        <p>2018년 하계 대장정 기획,<br> 기부금 210만원 조성하여 장애 영유아 거주시설 '맑은집'에 전달.</p>
+                        <a target="_blank" rel="noopener noreferrer" class="article"
+                            href="http://www.jjan.kr/news/articleView.html?idxno=2013070">뉴스 링크</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div id="P5" style="display: flex; justify-content: center;">
+            <div id="p5-top-txt">
+                <p style="font-family: 'Courgette', cursive;">Awards & Achievements</p>
+            </div>
+        </div>
+
+        <div id="p5-pack" style="display: flex; justify-content: space-around;">
+            <div class="p5-txt">
+                <p>16.11.25 &nbsp; 전라북도 프레젠테이션 대회 장려상, &nbsp; 전북대학교</p>
+                <p>17.01.20 &nbsp; 최우수 기획단, &nbsp; 전라북도 자원봉사센터</p>
+                <p>17.01.20 &nbsp; 최우수 팀장, &nbsp; 이춘석 국회의원실</p>
+                <p>17.01.20 &nbsp; 최우수 팀, &nbsp; 이춘석 국회의원실</p>
+                <p>17.03.26 &nbsp; 프로젝트 기획 유공, &nbsp; 대통령직속 청년위원회</p>
+                <p>17.10.13 &nbsp; 6대 핵심역량인재상(소통부문), &nbsp; 전북대학교 총장</p>
+                <p>18.12.03 &nbsp; 6대 핵심역량인재상(인성부문), &nbsp; 전북대학교 총장</p>
+            </div>
+            <div style="margin-top: 60px;">
+                <img src="Award.jpg" width="180px;" height="180px;">
+            </div>
+        </div>
+
+        <div style="display: flex; justify-content: center;">
+            <img src="black.jpg" width="720px;" height="100px;">
+        </div>
+        <div class="button-txt" style="text-align: center; margin-top: -120px;">
+            <a href="#P1">
+                <button type="button" class="btn btn-warning">
+                    TOP
+                </button>
+            </a>
         </div>
     </div>
 
