To fix Xbox(change jpg file name)

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                 <p>18.12.03 &nbsp; 6대 핵심역량인재상(인성부문), &nbsp; 전북대학교 총장</p>
             </div>
             <div style="margin-top: 60px;">
-                <img src="Award.jpg" width="180px;" height="180px;">
+                <img src="award.jpg" width="180px;" height="180px;">
             </div>
         </div>
 
