--- a/index.html
+++ b/index.html
@@ -58,10 +58,16 @@
             border-color: white;
         }
 
+        .p2-top-txt {
+            margin: 40px;
+            font-size: 27px;
+            font-style: italic;
+            text-align: center;
+        }
+
         #p2-txt {
             /*자기소개 폰트크기 18,16,14*/
-            color: ;
-            margin-top: 35px;
+            margin: 15px;
             font-size: 16px;
         }
 
@@ -71,7 +77,8 @@
             text-align: center;
             padding: 15px;
             margin-bottom: -15px;
-            font-size: 23px;
+            margin-top: 30px;
+            font-size: 25px;
         }
 
         .p3-link {
@@ -84,20 +91,25 @@
             /*활동내역 목록*/
             width: 720px;
             text-align: center;
-            font-size: 14px;
+            font-size: 15px;
             padding-bottom: 500px;
+            margin-top: 10px;
+            line-height: 2;
             /*Carousel margin 같이 조정*/
         }
 
         .carousel-top {
             /*슬라이드 소제목*/
             font-weight: bold;
+            font-size: 17px;
+            text-decoration-line: underline;
         }
 
         .carousel-caption {
             /*슬라이드 내용*/
             color: white;
-            background-color: black;
+            background: rgba(0, 0, 0, 0.5);
+            font-size: 15px;
         }
 
         #P4 {
@@ -109,14 +121,15 @@
         #p4-top-txt {
             /*언론 및 방송 제목*/
             width: 720px;
-            color: black;
             text-align: center;
             padding: 15px;
-            font-size: 23px;
+            margin-top: 30px;
+            font-size: 25px;
         }
 
         #p4-border {
             width: 720px;
+            margin-top: 20px;
             margin-right: 15px;
             margin-left: -15px;
         }
@@ -130,7 +143,7 @@
 
         .p4-sub-txt {
             /*언론 내용 제목*/
-            margin-top: 20px;
+            margin-top: 40px;
             font-size: 18px;
             font-weight: bold;
         }
@@ -148,6 +161,7 @@
 
         #P5 {
             width: 720px;
+            margin-top: 30px;
             margin-right: 15px;
             margin-left: -15px;
         }
@@ -155,10 +169,9 @@
         #p5-top-txt {
             /*수상내역 제목*/
             width: 720px;
-            color: black;
             text-align: center;
             padding-top: 20px;
-            font-size: 23px;
+            font-size: 25px;
         }
 
         #p5-pack {
@@ -166,14 +179,14 @@
             width: 720px;
             margin-right: 15px;
             margin-left: -15px;
-            padding-bottom: 20px;
-            font-size: 15px;
+            padding-bottom: 60px;
+            font-size: 16px;
         }
 
         .p5-txt {
             /*수상내역 세부 내용*/
             float: left;
-            margin-top: 8px;
+            margin-top: 30px;
         }
 
         body {
@@ -190,7 +203,7 @@
     <script src="" async defer></script>
     <div class="container">
         <div id="P1" style="display: flex; justify-content: center;">
-            <img src="black.jpg" width="720px;" height="450px;">
+            <img src="black.jpg" width="860px;" height="450px;">
         </div>
         <div>
             <div id="p1-txt">
@@ -229,35 +242,37 @@
             </div>
         </div>
 
-
+        <div class="p2-top-txt">
+            "키워드를 여기에"
+        </div>
         <div id="P2" style="display: flex; justify-content: center;">
-            <div style="float: left; margin: 15px; margin-top: 23px;">
-                <img src="profile.jpg" width="270px;" height="360px;">
+            <div style="float: left; margin: 10px; margin-top: 10px;">
+                <img src="profile.jpg" width="360px;" height="360px;">
             </div>
             <div id="p2-txt">
                 <p>자기소개 적기(큰 글자 18, 기본 16, 작은 글자 14)</p>
-                <p>좌측 사진, 키워드 픽토그램 찾아보기</p>
+                <p>좌측 사진, 키워드 찾아보기</p>
             </div>
         </div>
 
 
         <div id="P3" style="display: flex; justify-content: center; flex-wrap: wrap;">
-            <div style="width: ;">
+            <div>
                 <div id="p3-top-txt">
-                    <p style="font-family: 'Courgette', cursive;">Experiences(420*477)<br>
+                    <p style="font-family: 'Courgette', cursive;">Experiences<br>
                         <a class="p3-link" target="_blank" rel="noopener noreferrer" href="experience.html">
-                        more about(new tab)</a>
+                            more about(new tab)</a>
                     </p>
                 </div>
                 <div id="p3-txt">
-                    UnivExpo Jeonju 서포터즈 팀장<br>
-                    전라북도 대학생 PT 경진대회 프레젠터<br>
-                    청춘부보상 9기 기획단 루트장<br>
-                    2017 사회적기업가 육성사업<br>
-                    Story Creator 3기 멘토<br>
-                    영업인재 마스터 프로젝트 1~2기 기획 및 운영<br>
+                    CODE 8IGHT 코딩교육 수료<br>
                     청춘부보상 대장정 10~11기 기획 및 운영<br>
-                    CODE 8IGHT 코딩스쿨 수료<br>
+                    영업인재 마스터 프로젝트 1~2기 기획 및 운영<br>
+                    Story Creator 3기 멘토<br>
+                    2017 사회적기업가 육성사업<br>
+                    청춘부보상 9기 기획단 루트장<br>
+                    전라북도 대학생 PT 경진대회 프레젠터<br>
+                    UnivExpo Jeonju 서포터즈 팀장<br>
                     &nbsp;
                 </div>
             </div>
@@ -276,45 +291,62 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="ocean1.jpg">
+                            <img src="coding.jpg">
                             <div class="carousel-caption">
-                                <h6 class="carousel-top">UnivExpo 서포터즈</h6>
-                                <p>내용이 길어지면 이렇게 표시됩니다~~~~~~~~~~~~~~~~~~~~~~</p>
+                                <h6 class="carousel-top">CODE 8IGHT 코딩교육</h6>
+                                <p>19.02<br></p>
+                                html, css를 활용한 웹페이지 제작 <br>
                             </div>
                         </div>
+
                         <div class="carousel-item">
-                            <img src="ocean2.jpg">
-                            <div class="carousel-caption">
-                                <h6 class="carousel-top">PT 경진대회 프레젠터</h6>
-                                <p>내용</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="ocean3.jpg">
-                            <div class="carousel-caption">
-                                <h6 class="carousel-top">청춘부보상 루트장</h6>
-                                <p>내용</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="ocean2.jpg">
-                            <div class="carousel-caption">
-                                <h6 class="carousel-top">영마프 1~2기 운영</h6>
-                                <p>내용</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="ocean3.jpg">
+                            <img src="bubo3.jpg">
                             <div class="carousel-caption">
                                 <h6 class="carousel-top">국토대장정 2개 기수 운영</h6>
-                                <p>내용</p>
+                                <p>17.10 ~ 18.08<br></p>
+                                "청춘을 팝니다!"<br>
+                                전국적으로 총 <b>240명</b>의 참가자 모집하여 <b>415만원</b>의 기부금 조성<br>
+                                전라북도, KORAIL, 하이트진로 등 <b>5개 기업, 지자체</b>와의 협업
                             </div>
                         </div>
+
                         <div class="carousel-item">
-                            <img src="ocean1.jpg">
+                            <img src="master.jpg">
                             <div class="carousel-caption">
-                                <h6 class="carousel-top">CODE 8IGHT 코딩스쿨</h6>
-                                <p>내용</p>
+                                <h6 class="carousel-top">취업역량강화 프로그램 2개 기수 운영</h6>
+                                <p>17.01 ~ 04<br></p>
+                                전주, 서울에서 총 100명의 참가자 모집<br>
+                                <b>대통령직속 청년위원회, ETS 등</b> 5개 기업, 기관과 협업
+                            </div>
+                        </div>
+
+                        <div class="carousel-item">
+                            <img src="bubo2.jpg">
+                            <div class="carousel-caption">
+                                <h6 class="carousel-top">국토대장정 팀장</h6>
+                                <p>16.11 ~ 17.01<br></p>
+                                20명의 대원을 이끌고 4박 5일동안 국토대장정 수행<br>
+                                <b>활동 우수팀 선정</b>
+                            </div>
+                        </div>
+
+                        <div class="carousel-item">
+                            <img src="pre.jpg">
+                            <div class="carousel-caption">
+                                <h6 class="carousel-top">PT 경진대회 프레젠터</h6>
+                                <p>16.11<br></p>
+                                전북대학교에서 주최한 대학생 PT 대회 참가<br>
+                                신조어를 주제로 발표, <b>장려상</b> 수상
+                            </div>
+                        </div>
+
+                        <div class="carousel-item">
+                            <img src="univ.jpg">
+                            <div class="carousel-caption">
+                                <h6 class="carousel-top">UnivExpo 서포터즈 팀장</h6>
+                                <p>16.09 ~ 10<br></p>
+                                "대학생활에 색을 입히다"<br>
+                                10명의 팀원들과 함께 UCC, 포스터 제작 등 <b>팀프로젝트</b> 진행
                             </div>
                         </div>
                     </div>
@@ -339,7 +371,7 @@
 
         <div id="p4-border" style="display: flex; justify-content: space-around;">
             <div id="p4-pack">
-                <img src="10.jpg" width="220px;" height="240px;">
+                <img src="10.jpg" width="220px;" height="270px;">
                 <div class="p4-sub-txt">
                     <p>전주시 아동복지 성금 조성</p>
                     <div class="p4-main-txt">
@@ -350,7 +382,7 @@
                 </div>
             </div>
             <div id="p4-pack">
-                <img src="kbs.jpg" width="220px;" height="240px;">
+                <img src="kbs.jpg" width="220px;" height="270px;">
                 <div class="p4-sub-txt">
                     <p>KBS 투데이 전북 출연</p>
                     <div class="p4-main-txt">
@@ -359,11 +391,11 @@
                 </div>
             </div>
             <div id="p4-pack">
-                <img src="11.jpg" width="220px;" height="240px;">
+                <img src="11.jpg" width="220px;" height="270px;">
                 <div class="p4-sub-txt">
                     <p>복지시설 기부금 전달</p>
                     <div class="p4-main-txt">
-                        <p>2018년 하계 대장정 기획,<br> 기부금 210만원 조성하여 장애 영유아 거주시설 '맑은집'에 전달.</p>
+                        <p>2018년 하계 대장정 기획,<br> 기부금 210만원 조성해 장애 영유아 거주시설 '맑은집'에 전달.</p>
                         <a target="_blank" rel="noopener noreferrer" class="article"
                             href="http://www.jjan.kr/news/articleView.html?idxno=2013070">뉴스 링크</a>
                     </div>
@@ -380,21 +412,21 @@
 
         <div id="p5-pack" style="display: flex; justify-content: space-around;">
             <div class="p5-txt">
-                <p>16.11.25 &nbsp; 전라북도 프레젠테이션 대회 장려상, &nbsp; 전북대학교</p>
-                <p>17.01.20 &nbsp; 최우수 기획단, &nbsp; 전라북도 자원봉사센터</p>
-                <p>17.01.20 &nbsp; 최우수 팀장, &nbsp; 이춘석 국회의원실</p>
-                <p>17.01.20 &nbsp; 최우수 팀, &nbsp; 이춘석 국회의원실</p>
-                <p>17.03.26 &nbsp; 프로젝트 기획 유공, &nbsp; 대통령직속 청년위원회</p>
-                <p>17.10.13 &nbsp; 6대 핵심역량인재상(소통부문), &nbsp; 전북대학교 총장</p>
                 <p>18.12.03 &nbsp; 6대 핵심역량인재상(인성부문), &nbsp; 전북대학교 총장</p>
+                <p>17.10.13 &nbsp; 6대 핵심역량인재상(소통부문), &nbsp; 전북대학교 총장</p>
+                <p>17.03.26 &nbsp; 프로젝트 기획 유공, &nbsp; 대통령직속 청년위원회</p>
+                <p>17.01.20 &nbsp; 최우수 팀, &nbsp; 이춘석 국회의원실</p>
+                <p>17.01.20 &nbsp; 최우수 팀장, &nbsp; 이춘석 국회의원실</p>
+                <p>17.01.20 &nbsp; 최우수 기획단, &nbsp; 전라북도 자원봉사센터</p>
+                <p>16.11.25 &nbsp; 전라북도 프레젠테이션 대회 장려상, &nbsp; 전북대학교</p>
             </div>
-            <div style="margin-top: 60px;">
+            <div style="margin-top: 80px;">
                 <img src="award.jpg" width="180px;" height="180px;">
             </div>
         </div>
 
         <div style="display: flex; justify-content: center;">
-            <img src="black.jpg" width="720px;" height="100px;">
+            <img src="black.jpg" width="860px;" height="100px;">
         </div>
         <div class="button-txt" style="text-align: center; margin-top: -120px;">
             <a href="#P1">
