--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <meta property="og:url" content="https://uluru12.github.io/Portfolio/">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Portfolio">
+    <meta property="og:title" content="학선's Portfolio(ver.1)">
     <meta property="og:description" content="내가 걸어온 길">
     <meta property="og:image" content="ocean3.jpg">
     <style>
