--- a/index.html
+++ b/index.html
@@ -396,13 +396,13 @@
 
         <div id="p5-pack" style="display: flex; justify-content: space-around;">
             <div class="p5-txt">
-                <p>18.12.03 &nbsp; 6대 핵심역량인재상(인성부문), &nbsp; OO대학교 총장</p>
-                <p>17.10.13 &nbsp; 6대 핵심역량인재상(소통부문), &nbsp; OO대학교 총장</p>
+                <p>18.12.03 &nbsp; 6대 핵심역량인재상(인성부문), &nbsp; 전북대학교 총장</p>
+                <p>17.10.13 &nbsp; 6대 핵심역량인재상(소통부문), &nbsp; 전북대학교 총장</p>
                 <p>17.03.26 &nbsp; 프로젝트 기획 유공, &nbsp; 대통령직속 청년위원회</p>
                 <p>17.01.20 &nbsp; 최우수 팀, &nbsp; 이춘석 국회의원실</p>
                 <p>17.01.20 &nbsp; 최우수 팀장, &nbsp; 이춘석 국회의원실</p>
                 <p>17.01.20 &nbsp; 최우수 기획단, &nbsp; 전라북도 자원봉사센터</p>
-                <p>16.11.25 &nbsp; 전라북도 프레젠테이션 대회 장려상, &nbsp; OO대학교</p>
+                <p>16.11.25 &nbsp; 전라북도 프레젠테이션 대회 장려상, &nbsp; 전북대학교</p>
             </div>
         </div>
 
